tests/baselines/reference/importDeclWithClassModifiers.errors.txt
==== tests/cases/compiler/importDeclWithClassModifiers.ts (7 errors) ====
    module x {
        interface c {
        }
    }
    export public import a = x.c;
           ~~~~~~
!!! error TS1044: 'public' modifier cannot appear on a module element.
                               ~
!!! error TS2178: Could not find symbol 'c' in module 'x'.
    export private import b = x.c;
           ~~~~~~~
!!! error TS1044: 'private' modifier cannot appear on a module element.
                                ~
!!! error TS2178: Could not find symbol 'c' in module 'x'.
    export static import c = x.c;
           ~~~~~~
!!! error TS1044: 'static' modifier cannot appear on a module element.
                               ~
!!! error TS2178: Could not find symbol 'c' in module 'x'.
    var b: a;
        ~~~~
!!! error TS4026: Variable declaration cannot have the same name as an import declaration.
    